# FileBridge

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.bat
config/: config.yaml
docs/: _congig.yml  index.md
docs/000_pic/: general_page_layout.drawio  synchronization.drawio
docs/001_user_stories/: us_fs_001.md
docs/002_use_cases/001_frontend/: uc_fe_001.md  uc_fe_002.md
docs/002_use_cases/002_file_handling/: uc_fh_001.md  uc_fh_002.md
docs/003_architecture_mapping/001_frontend/: overview.md
docs/003_architecture_mapping/001_frontend/001_synchronization/: documentation.md
docs/003_architecture_mapping/002_data_models/: overview.md
docs/003_architecture_mapping/002_data_models/001_sychronization/: documention.md
docs/003_architecture_mapping/003_control_flow/: overview.md
docs/003_architecture_mapping/003_control_flow/001_application_initialzaion/: documentation.md
docs/003_architecture_mapping/003_control_flow/002_synchronization/: documentation.md
src/pages/: __init__.py
src/pages/configuration/view/: render_configuration.py
src/pages/documentation/view/: render_documentation.py
src/pages/synchronization/controller/: file_system.py
src/pages/synchronization/model/: files.py  page.py
src/pages/synchronization/view/: render_synchronization.py
src/pages/synchronization/view/sections/: render_file_stats.py  render_file_system.py
tests/unit/synchronization/controller/: test_file_system.py
tests/unit/synchronization/model/: test_files.py  test_page.py
tests/unit/synchronization/shared/: base_test.py
